solve overflow problem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,4 +10,9 @@
     font-family: "Roboto", sans-serif;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    overflow: hidden;
+}
+
+body{
+    background-color: rgb(16, 36, 73);
 }
